--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,9 @@
 ---
+layout: frame
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <meta charset="utf-8">
-  <title>{{ page.title }}</title>
-
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/x-icon" href="{{ site.url }}/favicon.ico">
-</head>
-<body>
-
-<header>
-<h1>GitHub-hosted Blog Example</h1>
-</header>
 
 <div>
 {{ content }}
 </div>
 
-<footer>
-<p><a href="https://github.com/penguineer/gh-blog">Find me on GitHub.</a></p>
-</footer>
 
-</body>
-</html>
